# MeeXP

./: CMakeLists.txt  LinuxBot.sln  README.md
LinuxBot/: LinuxBot.vcxproj  LinuxBot.vcxproj.filters  XPdata.cfg  data0.cfg  event.cpp  event.h  fileIO.cpp  fileIO.h  main.cpp  mybot  settings.h
LinuxBot/data/: 0.cfg  1.cfg  2.cfg
src/: LinuxBot.vcxproj  LinuxBot.vcxproj.filters  event.cpp  event.h  fileIO.cpp  fileIO.h  main.cpp  settings.h
